# aicqSDK

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-sdk.yml  publish.yml
aicq/: __init__.py  core.py  crypto.py  loop.py
aicqSDK.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk/: __init__.py  core.py  db.py  loop.py  server.py
