[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicqSDK"
version = "0.8.2"
description = "AICQ AI Agent SDK — Lightweight Python SDK for AI agents to connect to AICQ server via WebSocket real-time mode (startLoop), E2EE, ephemeral rooms, stream output, temp numbers, and file transfer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ctz168", email = "ctz168@outlook.com"},
]
keywords = ["aicq", "ai-agent", "sdk", "encrypted-chat", "e2ee", "nacl", "ed25519", "ephemeral", "websocket"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "pynacl>=1.5",
    "PyJWT>=2.8",
    "requests>=2.28",
    "qrcode>=7.4",
    "Pillow>=9.0",
]

[project.optional-dependencies]
agent = ["requests>=2.28"]
all = ["requests>=2.28"]

[project.urls]
Homepage = "https://aicq.online"
Repository = "https://github.com/ctz168/aicq"
Issues = "https://github.com/ctz168/aicq/issues"

[project.scripts]
aicq = "aicq:main"
